--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "nest-commander": "^3.4.0",
+    "puppeteer": "^19.5.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
