--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@json2csv/plainjs": "^6.1.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "hbs": "^4.2.0",
     "nest-commander": "^3.4.0",
     "puppeteer": "^19.5.2",
     "reflect-metadata": "^0.1.13",
